--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
 </head>
 
 <body>
-	<h1>hello world</h1>
+	<h1>Hello world</h1>
 	<div id="app"></div>
+	<input type="text" id="input-text" placeholder="...">
+	<button id="submit-data">Submit</button>
 
-	<script src="src/index.js">
-	</script>
+	<script src="index.js"></script>
 </body>
 
 </html>
